Add footer, loading and images

--- a/index.html
+++ b/index.html
@@ -25,18 +25,34 @@
 
   <section class="projects">
     <div class="container">
-      <ul class="projects__list">
-        <li class="projects__item">
-          <img src="images/test.jpg" alt="Spin Text" class="projects__item-img">
-          <h3 class="projects__item-title">Spin Text on Hover</h3>
-          <div class="projects__btns">
-            <a href="projects/01-spin/spin.html" class="btn projects__item-link">View Project</a>
-            <a href="#" class="btn projects__item-link">Source Code</a>
-          </div>
-        </li>
-      </ul>
+      <div class="projects__inner">
+        <ul class="projects__list">
+          <li class="projects__item">
+            <img src="images/spin.jpg" alt="Spin Text" class="projects__item-img">
+            <h3 class="projects__item-title">Spin Text on Hover</h3>
+            <div class="projects__btns">
+              <a href="projects/01-spin/spin.html" class="btn projects__item-link" target="_blank">View Project</a>
+            </div>
+          </li>
+          <li class="projects__item">
+            <img src="images/loading.jpg" alt="Loading text animation" class="projects__item-img">
+            <h3 class="projects__item-title">Loading Text Animation</h3>
+            <div class="projects__btns">
+              <a href="projects/02-loading-anim/loading-animation.html" class="btn projects__item-link"
+                target="_blank">View Project</a>
+            </div>
+          </li>
+        </ul>
+      </div>
     </div>
   </section>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__inner">
+        coded by <a class="footer__link" href="https://github.com/zhanybekovych">Zhanybekovych</a>
+      </div>
+    </div>
+  </footer>
 
   <script src="js/vendors.min.js"></script>
   <script src="js/main.js"></script>
