--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
                 target="_blank">View Project</a>
             </div>
           </li>
+          <li class="projects__item">
+            <img src="images/image-hover-screenshot.jpg" alt="image Hover Effect" class="projects__item-img">
+            <h3 class="projects__item-title">Image Hover Effect</h3>
+            <div class="projects__btns">
+              <a href="projects/03-img-hover/img-hover-efffect.html" class="btn projects__item-link"
+                target="_blank">View Project</a>
+            </div>
+          </li>
         </ul>
       </div>
     </div>
