Add Text Skew on Hover

--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
                 target="_blank">View Project</a>
             </div>
           </li>
+          <li class="projects__item">
+            <img src="images/skew.jpg" alt="Text skew on hover" class="projects__item-img">
+            <h3 class="projects__item-title">Skew Text on Hover</h3>
+            <div class="projects__btns">
+              <a href="projects/04-skew/04-skew-text.html" class="btn projects__item-link" target="_blank">View
+                Project</a>
+            </div>
+          </li>
         </ul>
       </div>
     </div>
