Add Image Hover Effect

--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
                 Project</a>
             </div>
           </li>
+          <li class="projects__item">
+            <img src="images/05-img-hover-scr.jpg" alt="image Hover Effect" class="projects__item-img">
+            <h3 class="projects__item-title">Image Hover Effect</h3>
+            <div class="projects__btns">
+              <a href="projects/05-img-hover/index.html" class="btn projects__item-link" target="_blank">View
+                Project</a>
+            </div>
+          </li>
         </ul>
       </div>
     </div>
