Add card flip animation

--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
                 Project</a>
             </div>
           </li>
+          <li class="projects__item">
+            <img src="images/06-flip-card.jpg" alt="Flip Card Effect" class="projects__item-img">
+            <h3 class="projects__item-title">Flip Card Animation</h3>
+            <div class="projects__btns">
+              <a href="projects/06-card-flip/card-flip.html" class="btn projects__item-link" target="_blank">View
+                Project</a>
+            </div>
+          </li>
         </ul>
       </div>
     </div>
