Add progressbar animation

--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
                 Project</a>
             </div>
           </li>
+          <li class="projects__item">
+            <img src="images/progressbar.jpg" alt="Progressbar" class="projects__item-img">
+            <h3 class="projects__item-title">Progressbar Animation</h3>
+            <div class="projects__btns">
+              <a href="projects/07-progressbar/progressbar.html" class="btn projects__item-link" target="_blank">View
+                Project</a>
+            </div>
+          </li>
         </ul>
       </div>
     </div>
