Add changing bg

--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@
                 Project</a>
             </div>
           </li>
+          <li class="projects__item">
+            <img src="images/08-bg-change.jpg" alt="Changing Background Color Animation" class="projects__item-img">
+            <h3 class="projects__item-title">Changing Background</h3>
+            <div class="projects__btns">
+              <a href="projects/08-changing-bg/changing-bg.html" class="btn projects__item-link" target="_blank">View
+                Project</a>
+            </div>
+          </li>
         </ul>
       </div>
     </div>
